Atualização de main para index.html

--- a/management.html
+++ b/management.html
@@ -12,7 +12,7 @@
         <nav id="menu">
             <ul id="menu-items">
                 <li id="menu-items-list">To do List App!</li>
-                <li id="menu-items-list"><a href="main.html" class="menu-items-list-link">Main</a></li>
+                <li id="menu-items-list"><a href="index.html" class="menu-items-list-link">Main</a></li>
                 <li id="menu-items-list"><a href="management.html" class="menu-items-list-link">Management</a></li>
             </ul>
         </nav>
