--- a/management.html
+++ b/management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Tarefas</title>
+    <title>To do List App! - Task Management</title>
     <link rel="stylesheet" href="style/management.css">
 </head>
 <body>
